# Xicro

./: README.md
arduino_code/Demo/: Demo.ino
arduino_code/demo_arduino/: demo_arduino.ino
arduino_code/fake_imu/: fake_imu.ino
arduino_code/xicro_action_client/: xicro_action_client.ino
arduino_code/xicro_action_server/: xicro_action_server.ino
arduino_code/xicro_service_client/: xicro_service_client.ino
arduino_code/xicro_service_server/: xicro_service_server.ino
docs/: abstract.rst  index.rst  installation.rst  setupxicro.rst  steptouse.rst  xicrolibraryapi.rst
example_arduino_code/Demo/: Demo.ino
xicro_interfaces/: CMakeLists.txt  package.xml
xicro_interfaces/action/: Toggle.action
xicro_interfaces/msg/: BatteryState.msg  DemoInput.msg  DemoOutput.msg  Header.msg  Imu.msg  JointState.msg  Pose.msg  PoseWithCovariance.msg  Quaternion.msg  Temperature.msg  Twist.msg  Uint8.msg
xicro_pkg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
xicro_pkg/config/: .Xicro_node_preSetup.txt  .Xicro_node_preSetup.xicro  .arduino_cpp_preSetup.txt  .arduino_h_preSetup.txt  .library_cpp_preSetup.xicro  .library_h_preSetup.xicro  .stm32_cpp_preSetup.txt  .stm32_h_preSetup.txt  setup_xicro.yaml
xicro_pkg/example/test_action_client/: readme.txt
xicro_pkg/example/test_action_client/Arduino_code/test_action_client_toggle_sum/: test_action_client_toggle_sum.ino
xicro_pkg/example/test_action_client/scripts/: action_server_sum_toggle_node.py
xicro_pkg/example/test_action_server/: readme.txt
xicro_pkg/example/test_action_server/Arduino_code/test_action_server_toggle_sum/: test_action_server_toggle_sum.ino
xicro_pkg/example/test_publish_imu/: readme.txt
xicro_pkg/example/test_publish_imu/Arduino_code/test_pub_imu/: test_pub_imu.ino
xicro_pkg/example/test_service_client_add_two_ints/: readme.txt
xicro_pkg/example/test_service_client_add_two_ints/Arduino_code/test_service_client_add_two_ints/: test_service_client_add_two_ints.ino
xicro_pkg/example/test_service_client_add_two_ints/scripts/: add_two_ints_server_node.py
xicro_pkg/example/test_service_server_add_two_ints/: readme.txt
xicro_pkg/example/test_service_server_add_two_ints/Arduino_code/service_server_add_two_ints/: service_server_add_two_ints.ino
xicro_pkg/example/test_subscribe_toggle_pin/: readme.txt
xicro_pkg/example/test_subscribe_toggle_pin/Arduino_code/test_sub_toggle_led/: test_sub_toggle_led.ino
xicro_pkg/example/test_subscribe_toggle_pin/scripts/: toggle_node.py
xicro_pkg/scripts/: .Xicro_node_preSetup.txt  .arduino_cpp_preSetup.txt  count_Sub.py  fake_Imu_node.py  generate_Xicro_node.py  generate_arduino_lib.py  generate_library.py  generate_xicro_node.py  gui_xicro.py  xicro_node_sub_N_pub_ID_1_stm32.py  xicro_node_test_pub_ID_1_stm32.py
xicro_pkg/test/: setup_xicro_test.yaml  xicro_protocol_test.py
